--- a/elements.html
+++ b/elements.html
@@ -50,6 +50,17 @@
 						<section class="posts">
 							<article>
 								<header>
+									<span class="date">July 06, 2025</span>
+									<h2><a href="#">Internship Certificate</a></h2>
+								</header>
+								<a href="https://www.linkedin.com/posts/rinkal-kumari-3a064128a_dataanalytics-excel-powerbi-activity-7349416485800288257-DhOW?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEY3tOgB1yuBHf_XRO1rTrgbS7WUdsLPR_4" class="image fit"><img src="images/Offer Letter Pentech.jpg" alt="" /></a>
+								
+								<ul class="actions special">								
+								</ul>
+							</article>		
+							
+							<article>
+								<header>
 									<span class="date">January 24, 2025</span>
 									<h2><a href="#">Offer letter</a></h2>
 								</header>
@@ -172,4 +183,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
