--- a/elements.html
+++ b/elements.html
@@ -53,7 +53,7 @@
 									<span class="date">July 06, 2025</span>
 									<h2><a href="#">Internship Certificate</a></h2>
 								</header>
-								<a href="https://www.linkedin.com/posts/rinkal-kumari-3a064128a_dataanalytics-excel-powerbi-activity-7349416485800288257-DhOW?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEY3tOgB1yuBHf_XRO1rTrgbS7WUdsLPR_4" class="image fit"><img src="images/Offer Letter Pentech.jpg" alt="" /></a>
+								<a href="https://github.com/Rinkal-Kumari/RinkalKumari__web.github.io/blob/main/images/Data%20Analytics%20at%20CollegeTips.png" class="image fit"><img src="images/Offer Letter Pentech.jpg" alt="" /></a>
 								
 								<ul class="actions special">								
 								</ul>
@@ -185,3 +185,4 @@
 	</body>
 
 </html>
+
