--- a/elements.html
+++ b/elements.html
@@ -64,7 +64,7 @@
 									<span class="date">January 24, 2025</span>
 									<h2><a href="#">Offer letter</a></h2>
 								</header>
-								<a href="https://drive.google.com/file/d/1BK4-nYgOFT4F59pjWv0DIpZWNuKRZESl/view?usp=sharing" class="image fit"><img src="images/Offer Letter Pentech.jpg" alt="" /></a>
+								<img src="images/Data Analytics at CollegeTips.jpg" alt="" />
 								
 								<ul class="actions special">								
 								</ul>
@@ -185,4 +185,5 @@
 	</body>
 
 </html>
+
 
