--- a/elements.html
+++ b/elements.html
@@ -77,7 +77,7 @@
 									<span class="date">July 19, 2024</span>										
 									<h2><a href="https://drive.google.com/file/d/1etxbJuM3ttaxSQYD69Id_y4qFWZpM1Kn/view?usp=sharing">Internship Certificate</a></h2>
 								</header>
-								<a href="https://drive.google.com/file/d/1etxbJuM3ttaxSQYD69Id_y4qFWZpM1Kn/view?usp=sharing" class="image fit"><img src="images/Data Analytics at CollegeTips.jpg" alt="" /></a>
+								<a href="https://drive.google.com/file/d/1etxbJuM3ttaxSQYD69Id_y4qFWZpM1Kn/view?usp=sharing" class="image fit"><img src="images/360 Digitmg.jpg" alt="" /></a>
 								
 							
 							</article>
@@ -186,6 +186,7 @@
 	</body>
 
 </html>
+
 
 
 
